tests/compile_fail/invalid_lit_str_with_null_bytes.rs
use better_cstr::c;

fn main() {
    c!("This string contains a null byte \0!");
}
